syntax = "proto3";

package documents;

option go_package = "wlcmtunknwndth.docsGRPC.v1;docsv1";

service Documents{
  rpc Create(UserTDocument) returns (TDocument);
  rpc Update(UserTDocument) returns (TDocument);
  rpc Process(TDocument) returns (TDocument);
  rpc Get(GetRequest) returns (TDocument);
}

message GetRequest{
  string url = 1;
}

message UserTDocument{
  string Url = 1;
  string Text = 2;
}

message TDocument{
  string Url = 1;
  uint64 PubDate = 2;
  uint64 FetchTime = 3;
  string Text = 4;
  uint64 FirstFetchTime = 5;
}